force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2EntityCommon__c/OrgChartPlus__MSO_OrgChart2EntityCommon__c.object-meta.xml
<CustomObject>
    <description>Global customer contact info</description>
    <label>MSO OrgChart Entity Common</label>
    <nameField>
        <displayFormat>OEC-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart Entity Common</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>