force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2EntityCommon__c/fields/OrgChartPlus__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MSO OrgChart Entity Common</relationshipLabel>
    <relationshipName>MSO_OrgChartEntityCommon</relationshipName>
    <type>Lookup</type>
</CustomField>