force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2EntityCommon__c/fields/OrgChartPlus__MatrixText__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__MatrixText__c</fullName>
    <label>MatrixText</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>