force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2EntityCommon__c/fields/OrgChartPlus__Opinion__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Opinion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Opinion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>