force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2EntityCommon__c/fields/OrgChartPlus__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MSO OrgChart Entity Common</relationshipLabel>
    <relationshipName>MSO_OrgChart_EntityCommon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>